--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Hikers Watch</string>
+    <string name="hikers_watch">Hiker\'s Watch</string>
+    <string name="longitude">Longitude:</string>
+    <string name="accuracy">Accuracy:</string>
+    <string name="latitude">Latitude:</string>
+    <string name="altitude">Altitude:</string>
+    <string name="address">Address:</string>
 </resources>
